src/index.css
* {
    box-sizing: border-box;
}

.td-item:hover {
    cursor: pointer;
}

.clicked {
    animation-duration: 0.2s;
    animation-name: scale;
    opacity: 0.9;
}

@keyframes scale {
    from {
        transform: scale(1);
    }

    50% {
        transform: scale(1.03)
    }

    to {
        transform: scale(1);
    }
}

.form-control:focus {
    box-shadow: none;
    border-color: #018735;
}

.form-control:focus::placeholder {
    color: transparent;
}

.form-control {
    border-bottom: 5px solid #03b6fc;
}

.fa-plus {
    width: 35px;
    color: #018735;
}

.text-success {
    background-color: transparent;
    border: 1px solid #018735;
}

.text-success:hover {
    border: 1px solid transparent;
    background-color: #018735;
}

.text-success:hover>.fa-plus {
    color: #fff;
}

#cont {
    position: absolute;
    display: none;
    width: 100%;
}

/* USE THIS TO CREATE TRIANGLE ON TOP OF ELEMENT */
#error::before {
    content: "";
    width: 5px;
    height: 5px;
    background-color: blue;
    position: absolute;
}

#error {
    background-color: #a82c34;
    padding: 10px;
    display: inline;
    border-radius: 5px;
    margin-top: 15px;
    color: #fff;
    right: 175px;
    bottom: 50px;
}

